--- a/pathFinding.html
+++ b/pathFinding.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Path Finding</title>
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/body.css">
@@ -15,12 +17,165 @@
     <div id="pageheading"></div>
 
     <!-- Control-Panel -->
-     <section >
+     <section class="control-panel">
+        <div>
+            <h2 class="control-title">Controls</h2>
+        </div>
+        <div class="control-body">
+            <div class="control-content">
+                <!-- Algorithm & Maze Section -->
+                 <div class="control-section">
+                    <div class="algorithm-box">
+                        <label class="algorithm-label" for="">Algorithms</label>
+                        <div class="dropdown">
+                            <button class="dropdown-button">
+                                <span>Dijkstra's Algorithm</span>
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                                </svg>
+                            </button>
+                            <div class="dropdown-content">
+                                <div class="dropdown-item">Dijkstra's Algorithm</div>
+                                <div class="dropdown-item">A* Search</div>
+                                <div class="dropdown-item">Breadth-First-Search</div>
+                                <div class="dropdown-item">Depth-First-Search</div>
+                                <div class="dropdown-item">Greedy-Best-First-Search</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="algorithm-box">
+                        <label class="algorithm-label" for="">Generate Maze</label>
+                        <div class="dropdown">
+                            <button class="dropdown-button">
+                                <span>Select Pattern</span>
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                                </svg>
+                            </button>
+                            <div class="dropdown-content">
+                                <div class="dropdown-item">Random Walls</div>
+                                <div class="dropdown-item">Recursive Division</div>
+                                <div class="dropdown-item">Stair Pattern</div>
+                                <div class="dropdown-item">Random Weights</div>
+                                <!-- <div class="dropdown-item">zcsdf</div> -->
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="control-section">
+                    <label class="algorithm-label" for="">Tools</label>
+                    <div class="first-button-box">
+                        <button id="walls-btn" class="btn">
+                            <div class="flex-item">
+                                <div class="square-box"></div>
+                                <span class="btn-text">Walls</span>
+                            </div>
+                        </button>
+                        <button id="weight-btn" class="btn">
+                            <div class="flex-item">
+                                <div class="square-box"></div>
+                                <span class="btn-text">Weight</span>
+                            </div>
+                        </button>
+                        <button id="bomb-btn" class="btn">
+                            <div class="flex-item">
+                                <svg class="icon icon-bomb" viewBox="0 0 24 24">
+                                        <circle cx="12" cy="12" r="10"></circle>
+                                        <path d="M12 8v4M8 10h8M4 4l4 4m8-4l-4 4"></path>
+                                    </svg>
+                            <span class="btn-text">Bomb</span>
+                            </div>
+                        </button>
+                        <!-- <button class="btn">
+                            <div class="flex-item">
+                                <div class="square-box"></div>
+                                    <span class="btn-text">mm</span>
+                            </div>
+                        </button> -->
+                    </div>
+                    <div class="speed-box">
+                        <label class="speed-label" for="">Speed</label>
+                        <div class="flex-item">
+                            <span class="slow">Slow</span>
+                            <input id="speed" type="range" min="1" max="100" value="50" class="slider">
+                            <span class="fast">Fast</span>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="control-section">
+                    <label class="algorithm-label" for="">Actions</label>
+                    <div class="button-box">
+                        <button id="clear-path-btn" class="btn">
+                            <div class="flex-item">
+                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+                                </svg>
+                                <span class="btn-text">Clear Path</span>
+                            </div>
+                        </button>
+                        <button id="clear-Walls-btn" class="btn">
+                            <div class="flex-item">
+                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+                                </svg>
+                                <span class="btn-text">Clear Walls</span>
+                            </div>
+                        </button>
+                        <button id="clear-weight-btn" class="btn">
+                            <div class="flex-item">
+                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+                                </svg>
+                               <span class="btn-text">Clear Weight</span>
+                            </div>
+                        </button>
+                        <button id="clear-board-btn" class="btn">
+                            <div class="flex-item">
+                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                                </svg>
+                                <span class="btn-text">Clear Board</span>
+                            </div>
+                        </button>
+                    </div>
+                    <div class="two-btn">
+                        <button id="visualization-button" class="black-btn">Visualize</button>
+                        <button id="reset-btn" class="black-btn">Reset</button>
+                    </div>
+                 </div>
+            </div>
+        </div>
      </section>
-
+     <section class="visualization-section">
+        <div class="visualization-body">
+            <div class="visualization-container"></div>
+            <div class="legend">
+                <div class="legend-item">
+                    <div class="legend-color start"></div>
+                    <span>Start Node</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color end"></div>
+                    <span>End Node</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color default"></div>
+                    <span>Wall</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color visited"></div>
+                    <span>Visited Node</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color shortest"></div>
+                    <span>Shortest Path</span>
+                </div>
+            </div>
+        </div>
+     </section>
     </main>
 
     <div id="footer"></div>
-    <script type="module" src="scripts/Modules/pathfinding.js"></script>
+    <script type="module" src="scripts/Modules/pathFinding/pathfinding.js"></script>
 </body>
 </html>
