Done Dijkstra with weighted and Bfs/Dfs without weighted

--- a/pathFinding.html
+++ b/pathFinding.html
@@ -55,7 +55,7 @@
                             <div class="dropdown-content">
                                 <div class="dropdown-item">Random Walls</div>
                                 <div class="dropdown-item">Recursive Division</div>
-                                <div class="dropdown-item">Stair Pattern</div>
+                                <!-- <div class="dropdown-item">Stair Pattern</div> -->
                                 <div class="dropdown-item">Random Weights</div>
                                 <!-- <div class="dropdown-item">zcsdf</div> -->
                             </div>
