All 4 Algo's Complete

--- a/pathFinding.html
+++ b/pathFinding.html
@@ -28,13 +28,13 @@
                     <div class="algorithm-box">
                         <label class="algorithm-label" for="">Algorithms</label>
                         <div class="dropdown">
-                            <button class="dropdown-button">
-                                <span>Dijkstra's Algorithm</span>
+                            <button class="dropdown-button algorithm-dropdown">
+                                <span class="algorithm-text">Dijkstra's Algorithm</span>
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
                                 </svg>
                             </button>
-                            <div class="dropdown-content">
+                            <div class="dropdown-content algorithm-content">
                                 <div class="dropdown-item">Dijkstra's Algorithm</div>
                                 <div class="dropdown-item">A* Search</div>
                                 <div class="dropdown-item">Breadth-First-Search</div>
@@ -46,17 +46,17 @@
                     <div class="algorithm-box">
                         <label class="algorithm-label" for="">Generate Maze</label>
                         <div class="dropdown">
-                            <button class="dropdown-button">
-                                <span>Select Pattern</span>
+                            <button class="dropdown-button maze-dropdown">
+                                <span class="maze-text">Select Pattern</span>
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
                                 </svg>
                             </button>
-                            <div class="dropdown-content">
+                            <div class="dropdown-content maze-content">
                                 <div class="dropdown-item">Random Walls</div>
                                 <div class="dropdown-item">Recursive Division</div>
                                 <!-- <div class="dropdown-item">Stair Pattern</div> -->
-                                <div class="dropdown-item">Random Weights</div>
+                                <!-- <div class="dropdown-item">Random Weights</div> -->
                                 <!-- <div class="dropdown-item">zcsdf</div> -->
                             </div>
                         </div>
