--- a/pathFinding.html
+++ b/pathFinding.html
@@ -73,19 +73,22 @@
                         </button>
                         <button id="weight-btn" class="btn">
                             <div class="flex-item">
-                                <div class="square-box"></div>
+                                <!-- <div class="square-box"></div> -->
+                                <img src="/assets/icons/kettlebell.svg" class="tool-icon" alt="Weight">
                                 <span class="btn-text">Weight</span>
                             </div>
                         </button>
                         <button id="bomb-btn" class="btn">
                             <div class="flex-item">
-                                <svg class="icon icon-bomb" viewBox="0 0 24 24">
+                                <!-- <svg class="icon icon-bomb" viewBox="0 0 24 24">
                                         <circle cx="12" cy="12" r="10"></circle>
                                         <path d="M12 8v4M8 10h8M4 4l4 4m8-4l-4 4"></path>
-                                    </svg>
+                                    </svg> -->
+                                <img src="/assets/icons/bomb.svg" class="tool-icon bomb" alt="Bomb">
                             <span class="btn-text">Bomb</span>
                             </div>
                         </button>
+                        
                         <!-- <button class="btn">
                             <div class="flex-item">
                                 <div class="square-box"></div>
@@ -93,6 +96,16 @@
                             </div>
                         </button> -->
                     </div>
+                    
+                    <!-- Add this after the bomb button in the Tools section -->
+                    <div class="checkbox-group">
+                    <input type="checkbox" id="bomb-waypoint-toggle" class="checkbox" style="cursor: pointer;">
+                    <label for="bomb-waypoint-toggle" class="checkbox-label">
+                        <img src="assets/icons/Waypoint.svg" class="icon-waypoint" alt="Waypoint">
+                        Waypoint Mode
+                    </label>
+                    </div>
+
                     <div class="speed-box">
                         <label class="speed-label" for="">Speed</label>
                         <div class="flex-item">
@@ -107,33 +120,25 @@
                     <div class="button-box">
                         <button id="clear-path-btn" class="btn">
                             <div class="flex-item">
-                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
-                                </svg>
+                                <img src="/assets/icons/clearpath.svg" class="action-icon" alt="Clear Path">
                                 <span class="btn-text">Clear Path</span>
                             </div>
                         </button>
                         <button id="clear-Walls-btn" class="btn">
                             <div class="flex-item">
-                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
-                                </svg>
+                                <img src="/assets/icons/clearwall.svg" class="action-icon" alt="Clear Walls">
                                 <span class="btn-text">Clear Walls</span>
                             </div>
                         </button>
                         <button id="clear-weight-btn" class="btn">
                             <div class="flex-item">
-                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
-                                </svg>
+                                <img src="/assets/icons/clearweight.svg" class="action-icon" alt="Clear Weight">
                                <span class="btn-text">Clear Weight</span>
                             </div>
                         </button>
                         <button id="clear-board-btn" class="btn">
                             <div class="flex-item">
-                                <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
-                                </svg>
+                                <img src="/assets/icons/reset.svg" class="action-icon" alt="Clear Weight">
                                 <span class="btn-text">Clear Board</span>
                             </div>
                         </button>
@@ -151,11 +156,13 @@
             <div class="visualization-container"></div>
             <div class="legend">
                 <div class="legend-item">
-                    <div class="legend-color start"></div>
+                    <!-- <div class="legend-color start"></div> -->
+                    <img src="/assets/icons/start.svg" class="legend-icon" alt="Start">
                     <span>Start Node</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-color end"></div>
+                    <!-- <div class="legend-color end"></div> -->
+                      <img src="/assets/icons/target.svg" class="legend-icon" alt="End">
                     <span>End Node</span>
                 </div>
                 <div class="legend-item">
