feat: Add injectAI script and update linkedList page

--- a/linkedList.html
+++ b/linkedList.html
@@ -101,5 +101,9 @@
     </main>
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/linkedList.js"></script>
+    <script type="module">
+   import { injectAI } from "./scripts/injectAI.js";
+   injectAI();
+</script>
 </body>
 </html>
