--- a/backend/public/aiAssistant.html
+++ b/backend/public/aiAssistant.html
@@ -15,15 +15,18 @@
     <!-- Floating AI Assistant -->
     <div id="aiAssistant" class="ai-assistant">
         <!-- AI Chat Button -->
-        <div id="aiButton" class="ai-button">
-            <svg class="ai-button-icon" fill="currentColor" viewBox="0 0 20 20">
-                <path d="M18 10c0 3.866-3.582 7-8 7a8.841 8.841 0 01-4.083-.98L2 17l1.338-3.123C2.493 12.767 2 11.434 2 10c0-3.866 3.582-7 8-7s8 3.134 8 7zM7 9H5v2h2V9zm8 0h-2v2h2V9zM9 9h2v2H9V9z"/>
-            </svg>
+         <div class="ai-button-wrapper">
+            <div id="aiButton" class="ai-button">
+                <svg class="ai-button-icon" fill="currentColor" viewBox="0 0 20 20">
+                    <path d="M18 10c0 3.866-3.582 7-8 7a8.841 8.841 0 01-4.083-.98L2 17l1.338-3.123C2.493 12.767 2 11.434 2 10c0-3.866 3.582-7 8-7s8 3.134 8 7zM7 9H5v2h2V9zm8 0h-2v2h2V9zM9 9h2v2H9V9z"/>
+                </svg>
+            </div>
             <!-- Notification Dot -->
             <div class="ai-notification-dot">
                 <div class="ai-notification-dot-inner"></div>
             </div>
-        </div>
+         </div>
+        
 
         <!-- AI Chat Window -->
         <div id="aiChatWindow" class="ai-chat-window">
