feat: Added Quick Sort algorithm for visualization

--- a/sorting.html
+++ b/sorting.html
@@ -41,7 +41,7 @@
                             <option value="insertion">Insertion Sort</option>
                             <option value="merge">Merge Sort</option>
                             <option value="quick">Quick Sort</option>
-                            <option value="heap">Heap Sort</option>
+                            <!-- <option value="heap">Heap Sort</option> -->
                         </select>
                     </div>
                     <div class="checkbox-group">
@@ -56,7 +56,7 @@
                             <option value="insertion">Insertion Sort</option>
                             <option value="merge">Merge Sort</option>
                             <option value="quick">Quick Sort</option>
-                            <option value="heap">Heap Sort</option>
+                            <!-- <option value="heap">Heap Sort</option> -->
                         </select>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
                     <div class="range-slider">
                         <div class="range-header">
                             <span class="range-slider-text">Size</span>
-                            <span id="size-value" class="range-value">150</span>
+                            <span id="size-value" class="range-value">250</span>
                         </div>
-                        <input type="range" name="Hello" id="size" class="range" min="10" max="600" value="50">
+                        <input type="range" name="Hello" id="size" class="range" min="10" max="600" value="250">
                     </div>
                 </div>
                 <div class="control-group">
@@ -85,9 +85,9 @@
                     <div class="range-slider">
                         <div class="range-header">
                             <span class="range-slider-text">Speed</span>
-                            <span id="speed-value" class="range-value">100</span>
+                            <span id="speed-value" class="range-value">92</span>
                         </div>
-                        <input type="range" name="Hello" id="speed" class="range" min="1" max="100" value="50">
+                        <input type="range" name="Hello" id="speed" class="range" min="1" max="100" value="92">
                     </div>
                 </div>
                 <div class="control-group">
