feat: integrate AI Assistant on all frontend pages with Render backend
- Updated injectAi.js to fetch AI HTML/JS/CSS from Render backend
- Updated AI POST requests to Render backend URL
- Added AI Assistant to all module pages

--- a/pathFinding.html
+++ b/pathFinding.html
@@ -184,5 +184,9 @@
 
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/pathFinding/pathfinding.js"></script>
+    <script type="module">
+        import { injectAI } from './script/injectAi.js';
+        injectAI();
+    </script>
 </body>
 </html>
