--- a/sorting.html
+++ b/sorting.html
@@ -210,5 +210,9 @@
 
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/sorting.js"></script>
+    <script type="module">
+        import { injectAI } from './script/injectAi.js';
+        injectAI();
+    </script>
 </body>
 </html>
