--- a/treeTraversal.html
+++ b/treeTraversal.html
@@ -109,5 +109,9 @@
 
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/treeTraversal.js"></script>
+    <script type="module">
+        import { injectAI } from './script/injectAi.js';
+        injectAI();
+    </script>
 </body>
 </html>
