--- a/treeTraversal.html
+++ b/treeTraversal.html
@@ -110,7 +110,7 @@
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/treeTraversal.js"></script>
     <script type="module">
-        import { injectAI } from './script/injectAi.js';
+        import { injectAI } from './scripts/injectAi.js';
         injectAI();
     </script>
 </body>
