--- a/linkedList.html
+++ b/linkedList.html
@@ -102,7 +102,7 @@
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/linkedList.js"></script>
     <script type="module">
-   import { injectAI } from "./scripts/injectAI.js";
+   import { injectAI } from "https://algoviz-iszl.onrender.com/scripts/injectAi.js";
    injectAI();
 </script>
 </body>
