--- a/pathFinding.html
+++ b/pathFinding.html
@@ -185,7 +185,7 @@
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/pathFinding/pathfinding.js"></script>
     <script type="module">
-        import { injectAI } from './scripts/injectAi.js';
+        import { injectAI } from 'https://algoviz-iszl.onrender.com/scripts/injectAi.js';
         injectAI();
     </script>
 </body>
