--- a/sorting.html
+++ b/sorting.html
@@ -211,7 +211,7 @@
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/sorting.js"></script>
     <script type="module">
-        import { injectAI } from 'https://algoviz-iszl.onrender.com/scripts/injectAi.js';
+        import { injectAI } from '/scripts/injectAi.js';
         injectAI();
     </script>
 </body>
