--- a/sorting.html
+++ b/sorting.html
@@ -209,10 +209,19 @@
     </main>
 
     <div id="footer"></div>
-    <script type="module" src="scripts/Modules/sorting.js"></script>
+    <script type="module" src="/scripts/Modules/sorting.js"></script>
     <script type="module">
         import { injectAI } from '/scripts/injectAi.js';
-        injectAI();
+    
+        // Add error handling
+        document.addEventListener('DOMContentLoaded', async () => {
+            try {
+                await injectAI();
+                console.log('AI injected successfully');
+            } catch (error) {
+                console.error('Failed to inject AI:', error);
+            }
+        });
     </script>
 </body>
 </html>
