--- a/index.html
+++ b/index.html
@@ -322,17 +322,14 @@
     <script type="module" src="scripts/main.js"></script>
     <script src="scripts/scroll-animations.js"></script>
     <script type="module">
-  import { injectAI } from "./scripts/injectAI.js";
+        import { injectAI } from "./scripts/injectAI.js";
 
-  document.querySelector(".try-btn").addEventListener("click", async () => {
-    // Inject only once
-    if (!document.querySelector(".ai-assistant")) {
-      await injectAI();
-    }
-    // Open immediately
-    document.querySelector(".ai-button").click();
-  });
-</script>
-
+        document.querySelector(".try-btn").addEventListener("click", async () => {
+            if (!document.querySelector(".ai-assistant")) {
+                // Inject and auto-open AI
+                await injectAI(true);
+            }
+        });
+    </script>
 </body>
 </html>
