--- a/linkedList.html
+++ b/linkedList.html
@@ -102,8 +102,11 @@
     <div id="footer"></div>
     <script type="module" src="scripts/Modules/linkedList.js"></script>
     <script type="module">
-   import { injectAI } from '/scripts/injectAi.js';
-   injectAI();
+        import { injectAI } from "/scripts/injectAI.js";
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            await injectAI(); // showImmediately defaults to false
+        });
 </script>
 </body>
 </html>
