--- a/sorting.html
+++ b/sorting.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorting</title>
+    <title>AlgoViz-Sorting Visualizer</title>
+    <link rel="icon" href="images/HomePageImages/logo2.png" type="image/png">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/general.css">
@@ -209,6 +210,7 @@
     </main>
 
     <div id="footer"></div>
+    <script src="scripts/nav.js"></script>
     <script type="module" src="/scripts/Modules/sorting.js"></script>
     <script type="module">
         import { injectAI } from "/scripts/injectAI.js";
