--- a/treeTraversal.html
+++ b/treeTraversal.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tree Visualizer</title>
+    <title>AlgoViz-Tree Visualizer</title>
+    <link rel="icon" href="images/HomePageImages/logo2.png" type="image/png">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/general.css">
@@ -108,6 +109,7 @@
     </main>
 
     <div id="footer"></div>
+    <script src="scripts/nav.js"></script>
     <script type="module" src="scripts/Modules/treeTraversal.js"></script>
     <script type="module">
         import { injectAI } from "/scripts/injectAI.js";
