--- a/explore.html
+++ b/explore.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore</title>
+    <title>AlgoViz-Explore</title>
+    <link rel="icon" href="images/HomePageImages/logo2.png" type="image/png">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/explore.css">
@@ -60,5 +61,6 @@
     
     <div id="footer"></div>
     <script type="module" src="scripts/explore.js"></script>
+    <script src="scripts/nav.js"></script>
 </body>
 </html>
