--- a/pathFinding.html
+++ b/pathFinding.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Path Finding</title>
+    <title>AlgoViz-PathFinding Visualizer</title>
+    <link rel="icon" href="images/HomePageImages/logo2.png" type="image/png">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/general.css">
@@ -183,6 +184,7 @@
     </main>
 
     <div id="footer"></div>
+    <script src="scripts/nav.js"></script>
     <script type="module" src="scripts/Modules/pathFinding/pathfinding.js"></script>
     <script type="module">
         import { injectAI } from "/scripts/injectAI.js";
