fix: resolve layout shift and correct spelling mistakes
- Fixed page gap issue caused by initial transform in scroll animations
- Added visibility control to prevent flicker on load
- Corrected spelling errors across sections
- Improved animation smoothness and layout stability on smaller screens

--- a/explore.html
+++ b/explore.html
@@ -51,7 +51,7 @@
                     <!-- Module 2 - stack and queue -->
                     <!-- Module 2 - AI Assistant -->
                     <!-- Module 2 - DSA memory coach -->
-                    <!-- in future whtever i neede to  -->
+                    <!-- in future whatever I need to  -->
                 </div>
             </div>
         </div>
