--- a/sorting.html
+++ b/sorting.html
@@ -13,7 +13,7 @@
 <body>
      <div id="navbar"></div>
     <main>
-        <!-- Header-sectiom -->
+        <!-- Header-section -->
     <div id="pageheading"></div>
 
     <!-- Control-Panel -->
