--- a/treeTraversal.html
+++ b/treeTraversal.html
@@ -14,7 +14,7 @@
 <body>
      <div id="navbar"></div>
     <main>
-        <!-- Header-sectiom -->
+        <!-- Header-section -->
     <div id="pageheading"></div>
 
     <!-- Control-Panel -->
@@ -55,7 +55,7 @@
                     </div>
                     
                     <div class="control-group">
-                        <h3 class="sub-heading">Tree Operation</h3>
+                        <h3 class="sub-heading">Tree Operations</h3>
                         <div class="buttons">
                             <button id="start-traversal" class="traversal-button big-button">Start Traversal</button>
                             <button id="reset-btn" class="traversal-button big-button">Reset</button>
