--- a/linkedList.html
+++ b/linkedList.html
@@ -14,7 +14,7 @@
 <body>
      <div id="navbar"></div>
     <main>
-        <!-- Header-sectiom -->
+        <!-- Header-section -->
     <div id="pageheading"></div>
 
     <!-- Control-Panel -->
