--- a/pathFinding.html
+++ b/pathFinding.html
@@ -14,7 +14,7 @@
 <body>
      <div id="navbar"></div>
     <main>
-        <!-- Header-sectiom -->
+        <!-- Header-section -->
     <div id="pageheading"></div>
 
     <!-- Control-Panel -->
@@ -38,9 +38,9 @@
                             <div class="dropdown-content algorithm-content">
                                 <div class="dropdown-item">Dijkstra's Algorithm</div>
                                 <div class="dropdown-item">A* Search</div>
-                                <div class="dropdown-item">Breadth-First-Search</div>
-                                <div class="dropdown-item">Depth-First-Search</div>
-                                <div class="dropdown-item">Greedy-Best-First-Search</div>
+                                <div class="dropdown-item">Breadth-First Search</div>
+                                <div class="dropdown-item">Depth-First Search</div>
+                                <div class="dropdown-item">Greedy-Best-First Search</div>
                             </div>
                         </div>
                     </div>
